fixed over flow from text on mobile\

--- a/src/components/MainInfo.css
+++ b/src/components/MainInfo.css
@@ -1,6 +1,8 @@
 .main {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+
 }
 .main-info{
     display: flex;
@@ -8,7 +10,7 @@
     align-items: center;
     width: 100%;
     height: auto;
-    margin-bottom: 3rem;
+    margin-bottom: 3rem; 
 }
 .image-link{
     width:50%;
@@ -51,13 +53,13 @@
         text-align: center;
     }
 
-    img{
+    .main-info img{
         width: 100%;
         height: 20rem;
         object-fit: cover;
     }
     .explanation-section {
-        width: 100%;
+        width: fit-content;
         text-align: center;
     }
 }
